--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">I Am Poor</string>
+    //<string name="title">I am</string>
+    <string name="title_highlight">I am poor</string>
+    <string name="imagedescription">coal</string>
 </resources>
